--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,20 @@ project(
     LANGUAGES CXX
 )
 
+include( FetchContent )
+
+FetchContent_Declare( imnodes
+    GIT_REPOSITORY https://github.com/Nelarius/imnodes.git
+    GIT_TAG master
+    EXCLUDE_FROM_ALL
+)
+
+FetchContent_GetProperties( imnodes )
+
+if( NOT imnodes_POPULATED )
+  FetchContent_Populate( imnodes )
+endif()
+
 add_library( ${PROJECT_NAME} STATIC
     imgui.cpp
     imgui_demo.cpp
@@ -15,17 +29,16 @@ add_library( ${PROJECT_NAME} STATIC
     imgui_widgets.cpp
     backends/imgui_impl_glfw.cpp
     backends/imgui_impl_opengl3.cpp
-    imnodes.cpp
+    ${imnodes_SOURCE_DIR}/imnodes.cpp
 )
 
 add_library( ${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME} )
 
 target_include_directories( ${PROJECT_NAME}
     PUBLIC
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/>
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/backends>
-        $<INSTALL_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/>
-        $<INSTALL_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/backends>
+        ${CMAKE_CURRENT_SOURCE_DIR}/>
+        ${CMAKE_CURRENT_SOURCE_DIR}/backends>
+        ${imnodes_SOURCE_DIR}/
 )
 
 target_link_libraries( ${PROJECT_NAME}
