Manually copy imnodes file to root

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,25 @@ project(
     LANGUAGES CXX
 )
 
-set( BUILD_IMNODES ON CACHE BOOL )
+option( BUILD_IMNODES "Inlude ImNodes" ON )
+
+add_library( ${PROJECT_NAME} STATIC
+    imgui.cpp
+    imgui_demo.cpp
+    imgui_draw.cpp
+    imgui_tables.cpp
+    imgui_widgets.cpp
+    backends/imgui_impl_glfw.cpp
+    backends/imgui_impl_opengl3.cpp
+)
+
+add_library( ${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME} )
+
+target_include_directories( ${PROJECT_NAME} PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/>
+    ${CMAKE_CURRENT_SOURCE_DIR}/backends>
+)
+
 
 if ( BUILD_IMNODES )
 
@@ -22,34 +40,23 @@ if ( BUILD_IMNODES )
     FetchContent_GetProperties( imnodes )
 
     if( NOT imnodes_POPULATED )
-    FetchContent_Populate( imnodes )
+        FetchContent_Populate( imnodes )
     endif()
+
+    file(
+        COPY
+        ${imnodes_SOURCE_DIR}/imnodes.h
+        ${imnodes_SOURCE_DIR}/imnodes_internal.h
+        ${imnodes_SOURCE_DIR}/imnodes.cpp
+        DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}
+    )
+
+    target_sources( ${PROJECT_NAME} PRIVATE
+        imnodes.cpp
+    )
 
 endif()
 
-add_library( ${PROJECT_NAME} STATIC
-    imgui.cpp
-    imgui_demo.cpp
-    imgui_draw.cpp
-    imgui_tables.cpp
-    imgui_widgets.cpp
-    backends/imgui_impl_glfw.cpp
-    backends/imgui_impl_opengl3.cpp
-    if ( BUILD_IMNODES )
-        ${imnodes_SOURCE_DIR}/imnodes.cpp
-    endif()
-)
-
-add_library( ${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME} )
-
-target_include_directories( ${PROJECT_NAME}
-    PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}/>
-        ${CMAKE_CURRENT_SOURCE_DIR}/backends>
-        if ( BUILD_IMNODES )
-            ${imnodes_SOURCE_DIR}/
-        endif()
-)
 
 target_link_libraries( ${PROJECT_NAME}
     PUBLIC
