Reintroduce build and install interfaces

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,8 +22,10 @@ add_library( ${PROJECT_NAME} STATIC
 add_library( ${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME} )
 
 target_include_directories( ${PROJECT_NAME} PUBLIC
-    ${CMAKE_CURRENT_SOURCE_DIR}/>
-    ${CMAKE_CURRENT_SOURCE_DIR}/backends>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/backends>
+    $<INSTALL_INTERFACE:/>
+    $<INSTALL_INTERFACE:/backends>
 )
 
 
